modules/vpc/sec-groups.tf
#web tier sg

#app tier sg

#db tier sg

#internet facing alb sg
resource "aws_security_group" "alb" {
  name        = "3_tier_vpc_alb_sg"
  description = "Application load balancer security group"
  vpc_id      = "${aws_vpc.vpc.id}"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = "${var.allowed_cidr_blocks}"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = "${var.allowed_cidr_blocks}"
  }

  # Allow all outbound traffic.
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags {
    Name = "3-tier-vpc-alb-security-group"
  }
}
